# Kiln

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: AudioAnalyser.cpp  AudioAnalyser.h  BaseComponents.cpp  BaseComponents.h  Compressor.cpp  Compressor.h  CompressorSection.cpp  CompressorSection.h  CrossoverSection.cpp  CrossoverSection.h  Gain.cpp  Gain.h  GainSection.cpp  GainSection.h  Limiter.cpp  Limiter.h  LimiterSection.cpp  LimiterSection.h  LinearPhaseCrossover.cpp  LinearPhaseCrossover.h  LinkedImage.h  LogoSection.cpp  LogoSection.h  LookAndFeel.cpp  LookAndFeel.h  ParamUtils.cpp  ParamUtils.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProgramManager.cpp  ProgramManager.h  Saturation.cpp  Saturation.h  SaturationSection.cpp  SaturationSection.h
tests/: AudioAnalyser.cpp  CMakeLists.txt  Compressor.cpp  Gain.cpp  Limiter.cpp  LinearPhaseCrossover.cpp  ParamUtils.cpp  ProgramManager.cpp  Saturation.cpp
